[package]
name = "record"
version = "0.1.0"
authors = ["Andy Bell <andy.bell.github@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
curl = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

conduit-test = "0.8"
hyper = "0.11"
hyper-tls = "0.1"
futures = "0.1"
tokio-core = "0.1"
tokio-service = "0.1"
